# rag-chatbot-dlai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  frontend-changes.md  pyproject.toml
.claude/commands/: implement-feature.md
backend/: .coverage  PROPOSED_FIXES.md  TEST_RESULTS.md  TODO.md  ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
prompts/: backend-tool-refactor.md
scripts/: check-all.sh  format.sh  lint.sh  test.sh  typecheck.sh
