[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Asyncio configuration for pytest-asyncio 0.24.0
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Test markers
markers = [
    "unit: Unit tests for individual components (fast)",
    "integration: Integration tests for component interaction",
    "api: API endpoint tests using TestClient",
    "slow: Tests that take significant time to run",
]

# Output and execution options
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Error on unknown markers
    "--strict-config",             # Error on config issues
    "--tb=short",                  # Shorter traceback format
    "-ra",                         # Show summary of all test outcomes
    "--color=yes",                 # Force color output
]

# Warning filters
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:resource_tracker.*:UserWarning",
]

# Python configuration
minversion = "8.0"
pythonpath = ["backend"]
